--- a/intranet-sudesb/ramais/css/mobile.css
+++ b/intranet-sudesb/ramais/css/mobile.css
@@ -40,6 +40,14 @@
         font-size: 1em;
     }
 
+    button#dicas {
+        width: 25%;
+    }
+
+    dialog > p {
+        font-size: 0.3em;
+    }
+
     ::-webkit-scrollbar {
         width: 0px;
         height: 0px;
