--- a/nana/estilo/style.css
+++ b/nana/estilo/style.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&family=Shantell+Sans:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
 
 
 
@@ -7,7 +8,8 @@
 
 :root {
     --HEADER:       #815321;
-    --NAV:          rgb(107, 68, 26);
+    --NAV-1:        #60380d5b;
+    --NAV-2:        #60380d49;
     --NAV-HOVER:    #523311;
     --BODY-1:       #60380d;
     --BODY-2:       #8c5a29;
@@ -118,20 +120,23 @@ h1 {
 }
 
 #historia {
-    width: 90%;
+    width: 80%;
     position: relative;
-    left: 6%;
+    left: 9%;
     text-align: justify;
-    padding: 10px 0px 30px 0px;
+    padding: 10px 10px 30px 10px;
 }
 
 #ambiente {
+    width: 90%;
+    position: relative;
+    left: 6%;
     text-align: center;
     padding: 10px 0px 30px 0px;
 }
 
 h2 {
-    padding: 20px 0px 0px 0px;
+    padding: 55px 0px 0px 0px;
     font-size: 1.9em;
 }
 
@@ -177,7 +182,7 @@ h5 {
 
 section.normal {
     background-image: linear-gradient(var(--BODY-1), var(--BODY-2));
-    padding: 16% 0px 6% 0px;
+    padding: 16% 0px 16% 0px;
 }
 
 section.imagem {
@@ -185,7 +190,7 @@ section.imagem {
     background-color: var(--BODY);
     box-shadow: inset 6px 6px 13px var(--SHADOW);
     background-attachment: fixed;
-    padding: 0px 0px 10% 0px;
+    padding: 0px 0px 16% 0px;
 }
 
 section#img01 {
