--- a/nana/estilo/style.css
+++ b/nana/estilo/style.css
@@ -1,7 +1,6 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&family=Shantell+Sans:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
 
 
 /* PALETA DE CORES */
@@ -25,8 +24,6 @@
 * {
     padding: 0;
     margin: 0;
-    font-family: 'Roboto Mono', monospace;
-    font-weight: bold;
     color: var(--FONT);
 }
 
@@ -49,6 +46,8 @@ header {
 }
 
 nav {
+    font-family: 'Roboto Mono', monospace;
+    font-size: 1.3em;
     text-align: justify;
     padding: 0px 0px 4px 0px;
 }
@@ -113,6 +112,7 @@ body {
 }
 
 h1 {
+    
     position: relative;
     bottom: 40px;
     text-align: center;
@@ -165,6 +165,7 @@ h5 {
 }
 
 #texto-section-1 {
+    font-family: 'Roboto Mono', monospace;
     font-size: 0.9em;
     display: inline-flex;
     padding: 0px 0px 20px 0px;
@@ -181,11 +182,13 @@ h5 {
 }
 
 section.normal {
+    font-family: 'Montserrat', sans-serif;
     background-image: linear-gradient(var(--BODY-1), var(--BODY-2));
     padding: 16% 0px 16% 0px;
 }
 
 section.imagem {
+    font-family: 'Montserrat', sans-serif;
     text-align: center;
     background-color: var(--BODY);
     box-shadow: inset 6px 6px 13px var(--SHADOW);
