--- a/nana/paginas/login/cadastro/estilo/style.css
+++ b/nana/paginas/login/cadastro/estilo/style.css
@@ -96,6 +96,24 @@ section {
     padding: 15px 0px 15px 0px;
 }
 
+#imagem-perfil {
+    width: 100%;
+    height: 170px;
+    border-radius: 50%;
+}
+
+.borda {
+    position: relative;
+    top: 20px;
+    left: 26%;
+    width: 50%;
+    height: 170px;
+    border-radius: 50%;
+    border: 2px solid #523311;
+    box-shadow: 1px 1px 7px rgba(0, 0, 0, 0.219);
+    background-color: white;
+}
+
 #telefone {
     position: relative;
     bottom: 80px;
