--- a/nana/paginas/login/cadastro/estilo/query.css
+++ b/nana/paginas/login/cadastro/estilo/query.css
@@ -15,7 +15,7 @@
     }
 
     nav > a {
-        font-size: 1.3em;
+        font-size: 1.0em;
         margin: 0px 5px 0px 0px;
     }
 
@@ -43,6 +43,10 @@
         width: 50%;
     }
 
+    form {
+        padding-top: 20px;
+    }
+
     #titulo {
         font-size: 1.9em;
     }
@@ -60,7 +64,40 @@
         margin-right: 285px;
     }
 
-    .campo input[type="text"], .campo input[type="number"], .campo input[type="tel"]{
+    #telefone {
+        position: relative;
+        bottom: 10%;
+    }
+
+    #perfil {
+        position: relative;
+        top: 15px;
+        bottom: 0%;
+        left: 22%;
+        padding-bottom: 50px;
+    }
+
+    #matricula {
+        position: relative;
+        top: 0px;
+    }
+    
+    #isenha {
+        padding-right: 138%;
+    }
+    
+    #isenha2 {
+        padding-right: 87%;
+    }
+
+    #caixa-senha2 {
+        position: relative;
+        right: 28%;
+        top: 100px;
+        padding-bottom: 90px;
+    }
+
+    .campo input[type="text"], .campo input[type="number"], .campo input[type="tel"], .campo input[type="password"]{
         width: 90%;
         padding: 10px 0px 10px 10px;
     }
@@ -149,11 +186,30 @@
         position: relative;
         top: 15px;
         bottom: 0%;
-        left: 24%;
+        left: 25%;
         padding-bottom: 50px;
     }
 
-    .campo input[type="text"], .campo input[type="number"], .campo input[type="tel"]{
+    #matricula {
+        position: relative;
+        top: 0px;
+    }
+    
+    #isenha {
+        padding-right: 138%;
+    }
+    
+    #isenha2 {
+        padding-right: 0px;
+    }
+
+    #caixa-senha2 {
+        position: relative;
+        left: 36%;
+    }
+    
+
+    .campo input[type="text"], .campo input[type="number"], .campo input[type="tel"], .campo input[type="password"]{
         width: 90%;
         padding: 10px 0px 10px 10px;
     }
