--- a/nana/estilo/style.css
+++ b/nana/estilo/style.css
@@ -127,7 +127,7 @@ h1 {
     padding: 10px 10px 30px 10px;
 }
 
-#ambiente {
+#descricao-ambiente {
     width: 90%;
     position: relative;
     left: 6%;
