--- a/nav 2/style.css
+++ b/nav 2/style.css
@@ -119,7 +119,7 @@ ul > li > ul > li {
 
 .ul-sub {
     position: absolute;
-    width: 61%;
+    width: 63%;
     margin: 1px 0px 0px 0px;
     box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.402);
     display: none;
@@ -138,8 +138,9 @@ ul > li > ul > li {
 }
 
 #unidades {
-    font-size: 1em;
+    font-size: 0.9em;
     font-weight: bold;
+    text-align: center;
     color: var(--FONT);
     padding: 0px 0px 0px 15px;
     margin: 20px 0px 0px 0px;
@@ -222,7 +223,7 @@ section.imagem {
     align-items: center;
 
     background-color: var(--BODY);
-    background-attachment: fixed;
+
     box-shadow: inset 6px 6px 13px var(--SHADOW);
     height: 38em;
 }
@@ -230,16 +231,19 @@ section.imagem {
 section#img01 {
     background-image: url(imagens/img\ 1.png);
     background-size: cover;
+    background-position: center center;
 }
 
 section#img02 {
     background-image: url(imagens/img\ 2.png);
-    background-size: cover;
+    background-size: 100%;
+    background-position: center center;
 }
 
 section#img03 {
     background-image: url(imagens/img\ 3.jpg);
     background-size: cover;
+    background-position: center center;
 }
 
 footer {
