--- a/nav 2/style.css
+++ b/nav 2/style.css
@@ -64,30 +64,30 @@ ul {
 }
 
 #ul-principal {
-    width: 90%;
+    width: 100%;
     margin: auto;
 }
 
 img#menu-img {
     display: block;
     padding: 5px 0px;
+    height: 30px;
 }
 
 .botao {
     text-align: center;
     text-decoration: none;
-
-    box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.402);
-
-    background-color: var(--BODY-1);
+    
     color: var(--font-white);
 
     display: block;
-    padding: 0px 75px;
+    padding: 6px 8px;
+
+    border-radius: 100%;
 }
 
 .botao:hover {
-    background-color: #452808;
+    background-color: #4528085e;
 }
 
 .link-sub-menu  {
@@ -119,6 +119,7 @@ ul > li > ul > li {
 
 .ul-sub {
     position: absolute;
+    left: 49%;
     width: 63%;
     margin: 1px 0px 0px 0px;
     box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.402);
