--- a/projetos/plataforma-sudesb/css/tela-principal.css
+++ b/projetos/plataforma-sudesb/css/tela-principal.css
@@ -30,7 +30,7 @@ nav {
     
     display: flex;
     
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
     flex-direction: row-reverse;
 
@@ -40,7 +40,7 @@ nav {
     height: 6rem;
     width: 100vw;
 
-    gap: 65rem;
+    gap: 50rem;
 }
 
 ul {
@@ -57,8 +57,12 @@ img#menu-img {
 }
 
 .logo {
+    padding: 0 0 0 5rem;
+}
+
+.aba {
     display: flex;
-    justify-content: center;
+    gap: 50rem;
 }
 
 .botao {
@@ -115,11 +119,6 @@ ul > li > ul > li {
     width: 13%;
     margin: 1px 0px 0px 0px;
     box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.402);
-}
-
-.teste {
-    display: flex;
-    justify-content: center;
 }
 
 
