--- a/busca/css/mobile.css
+++ b/busca/css/mobile.css
@@ -34,6 +34,15 @@
         margin: 15% 0 0 0;
     } 
 
+    td {
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+    table {
+        margin-left: 3em;
+        margin-bottom: 15%;
+    }
+
     .container {
         overflow-x: auto;
     }
