--- a/busca/css/estilo_principal.css
+++ b/busca/css/estilo_principal.css
@@ -85,7 +85,7 @@ td, th {
     width: 85%;
     display: flex;
     justify-content: right;
-    margin: -8% 0 0 0;
+    margin: 3% 0 0 0;
 }
 
 #ipesquisa {
@@ -100,7 +100,7 @@ td, th {
 
 label {
     font-family: 'Montserrat', sans-serif;
-    font-size: 1em;
+    font-size: 1.2em;
     font-weight: bold;
 
     display: flex;
@@ -157,20 +157,18 @@ a:hover {
 }
 
 #dfPessoas {
-    background-color: var(--NAV);
+ 
     color: var(--BODY);
 
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
 
-    width: 20%;
+    width: 60%;
     border-radius: 20px;
 
     position: relative;
-    bottom: 150px;
-    left: 6%;
-
-    box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.396);
+    top: 30px;
+    left: 0px;
     
     padding: 10px 0 10px 0;
     text-align: center;
@@ -190,12 +188,12 @@ a:hover {
     border: none;
     border-radius: 5px;
 
-    width: 30%;
+    width: 40%;
     height: 30px;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    position: relative;
+    left: 33%;
+    top: 10px;
 
     margin: 0 0 15px 0;
 
@@ -204,10 +202,11 @@ a:hover {
 
 .input-width {
     height: 20px;
+    width: 190%;
 }
 
 #botao:hover {
-    background-color: #c1bbbb;
+    background-color: rgb(169, 169, 169);
 }
 
 ::-webkit-scrollbar {
