--- a/busca/css/estilo_principal.css
+++ b/busca/css/estilo_principal.css
@@ -124,19 +124,23 @@ footer {
    height: 34px;
 }
 
+footer > p > a {
+    color: white;
+    font-weight: bold;
+}
+
 .texto-footer {
     text-align: center;
     padding-top: 8px;
 }
 
 a {
-    color: var(--BODY);
-    font-weight: bold;
+    color: black;
     text-decoration: none;
 }
 
 a:hover {
-    color: #b6b4b4;
+    color: var(--BODY);
     text-decoration: underline;
 }
 
@@ -147,6 +151,10 @@ a:hover {
 .email:hover {
     color: white;
 }
+
+table.dados a[href^="mailto:"] {
+    color: black;
+  }
 
 .container {
     display: flex;
