--- a/busca/css/estilo_principal.css
+++ b/busca/css/estilo_principal.css
@@ -95,6 +95,8 @@ td, th {
     border-radius: 5px;
     border: 1px solid rgb(100, 99, 99);
 
+    padding: 0 0 0 5px;
+
     box-shadow: 0px 0px 5px 0px rgba(81, 80, 80, 0.339);
 }
 
