--- a/ramais/css/estilo_principal.css
+++ b/ramais/css/estilo_principal.css
@@ -150,8 +150,9 @@ footer {
     display: flex;
     flex-direction: row;
     justify-content: left;
-    gap: 2rem;
-    padding: 0 10px;
+    align-items: center;
+    gap: 1rem;
+    padding: 0 8px;
 }
 
 #sudesb-rodape {
