--- a/ramais/css/popup.css
+++ b/ramais/css/popup.css
@@ -7,15 +7,16 @@ dialog::backdrop {
 
 dialog {
     background-image: linear-gradient(#003D73, #012748);
+    opacity: 100%;
     position: relative;
     top: 20%;
-    left: 38%;
+    left: 25%;
 
     border: none;
     border-radius: 30px;
     box-shadow: 0 0 1em rgb( 0 0 0 / .3);
 
-    width: 24%;
+    width: 50%;
     height: 52%;
 
     padding-top: 10px;
