--- a/plataforma-sudesb-new/css/tela-principal.css
+++ b/plataforma-sudesb-new/css/tela-principal.css
@@ -54,18 +54,33 @@ ul {
     text-align: center;
     text-decoration: none;
 
-    box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.402);
+
     border-radius: 4px;
 
-    background-color: var(--BUTTON);
+    
     color: var(--font-white);
 
     display: block;
     width: 180px;
 }
 
-.botao:hover {
-    background-color: #09425e;
+#menu-caixa {
+    background-color: #001b32;
+    border-radius: 5px;
+
+    position: relative;
+    left: 30px;
+    
+    width: 70%;
+    height: 40px;
+}
+
+#menu-caixa:hover {
+    background-color: #093348;
+}
+
+#menu {
+    padding: 7px 0 0 0;
 }
 
 .link-sub-menu  {
