--- a/busca/css/estilo_principal.css
+++ b/busca/css/estilo_principal.css
@@ -3,7 +3,7 @@
 
 :root {
     --BODY:   #F2F2F2;
-    --HEADER: #41627f;
+    --HEADER: #062e52;
     --NAV:    #003D73;
     --TABLE:  #D9D9D9;
 }
@@ -13,11 +13,23 @@
     margin: 0;
 }
 
+header {
+    background-color: var(--HEADER);
+    height: 4rem;
+}
+
 nav {
+    margin: auto;
+    background-image: linear-gradient(#003D73, #012748);
+    height: 85px;
+    width: 90vw;
+    border-radius: 0 0 30px 30px;
+}
+
+#logomarca {
     display: flex;
     justify-content: center;
-    background-color: var(--NAV);
-    padding: 10px 0 5px 0;
+    padding: 10px 0 0 0;
 }
 
 ul {
@@ -49,7 +61,7 @@ table {
 }
 
 th {
-    background-color: var(--NAV);
+    background-color: var(--HEADER);
     color: var(--BODY);
 }
 
@@ -60,7 +72,7 @@ thead {
 thead > tr > th {
     position: sticky;
     top: -1px;
-    background-color: var(--NAV);
+    background-color: var(--HEADER);
 }
 
 tbody {
@@ -119,21 +131,36 @@ section {
 footer {
    position: fixed;
    bottom: 0; 
-   background-color: var(--NAV); 
+   background-image: linear-gradient(#003D73, #012748); 
    color: var(--BODY);
 
+   display: flex;
+   align-items: center;
    width: 100vw;
-   height: 34px;
+   height: 44px;
 }
 
-footer > p > a {
-    color: white;
-    font-weight: bold;
+#rodape {
+    font-family: 'Montserrat', sans-serif;
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    align-items: center;
+    gap: 1rem;
+    padding: 0 8px;
+}
+
+#sudesb-rodape {
+    font-size: 1.2rem;
+    padding: 0 60rem 0 0;
 }
 
 .texto-footer {
-    text-align: center;
-    padding-top: 8px;
+    padding-top: 5px;
+}
+
+footer > ul > li > strong > a {
+    color: white;
 }
 
 a {
