--- a/plataforma-sudesb-new/css/intranet.css
+++ b/plataforma-sudesb-new/css/intranet.css
@@ -4,11 +4,19 @@ body {
     background-color: #F0F6F6;
 }
 
-.card-teste {
+.borda {
+    border-right: 1px solid rgba(255, 255, 255, 0.445);
+}
+
+.nav-link {
+    margin-right: 15px;
+}
+
+.card-hover {
     text-decoration: none;
 }
 
-.card-teste:hover {
+.card-hover:hover {
     transition: transform 0.5s;
     transform: translate(-4px, -4px);
 }
